--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,4 +6,7 @@
     ).html_safe %>
   <% end %>
 </script>
+<script type="text/javascript">
+  window.background = '<%= image_url("logo.jpg") %>'
+</script>
 <div id="root"></div>
