--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -224,69 +224,180 @@
   margin-top: 20px;
   color: #f50;
 }
+//
+// .parent-div {
+//   background-color: $black;
+//   overflow: hidden;
+//   display: flex;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 2;
+// }
+//
+// .parent-div a {
+//   text-decoration: none;
+//   font-family: 'Jaldi', sans-serif;
+//   font-size: 24px;
+//   color: $lightgrey;
+//
+// }
 
-.nav-parent {
-  background-color: $black;
-  overflow: hidden;
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-}
-
-.nav-bar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.top {
   width: 100%;
-  height: 100%;
-  color: $black;
   display: flex;
-  align-items: center;
-  height: 50px;
-
+  margin: auto;
+  position: fixed;
+  background-color: $lightgrey;
 }
 
+.parent-div {
+  display: flex;
+  background-color: $black;
+  width: 75%;
+  margin: auto;
+  height: 52px;
+}
 
-.nav-bar li {
-  display: inline;
+.parent-div button {
+  font-size: 24px;
   font-family: 'Jaldi', sans-serif;
-
+  text-decoration: none;
+  color: white;
 }
 
-.nav-bar li a {
+.nav-profile {
+  border-right: 1px solid #111;
+  text-align: center;
+  padding: 15px;
+}
+
+.nav-logout {
+  border-right: 1px solid #111;
+  text-align: center;
+  padding: 15px;
+}
+
+.parent-div a {
+  font-size: 24px;
+  font-family: 'Jaldi', sans-serif;
   text-decoration: none;
-  color: $lightgrey;
-  padding: 12px;
-  width: 150px;
-  height: 46px;
+  color: white;
+}
+
+.nav-home {
+  border-right: 1px solid #111;
+  text-align: center;
+  padding: 15px;
+}
+
+.nav-logout {
+  border-right: 1px solid #111;
+  text-align: center;
+  padding: 15px;
+}
+.nav-collection  {
+  padding: 15px;
+  text-align: center;
   border-right: 1px solid #111;
 }
 
-.nav-bar img {
+.nav-search   {
+  padding: 15px 15px 0px 15px;
+  border-right: 1px solid #111;
+}
+
+.nav-upload  {
+  border-right: 1px solid #111;
+  text-align: center;
+  padding: 15px;
+}
+
+
+
+
+
+.img-div {
+  height: 50px;
+  width: 50px;
+}
+
+.nav-logo {
+  display: flex;
+  justify-content: center;
   background: $orange;
   width: 50px;
   height: 52px;
-  margin-left: 32px;
-  position: relative;
-  top: 3px;
+  border: none;
+  z-index: 10;
 }
 
-.nav-search {
-  padding: 9px 10px 8px;
-}
 
 .nav-search input {
   width: 300px;
 }
 
+.usershow-parent {
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: $lightgrey;
+  margin-bottom: 2px;
+}
+
 .usershow-header {
   background: linear-gradient(315deg, rgb(156, 155, 156) 0%, rgb(68, 58, 61) 100%);
   display: flex;
-  height: 250px;
-  margin-left: 37px;
-  margin-right: 37px;
+  margin: auto;
+  align-items: center;
+  height: 300px;
+  width: 75%;
+}
+
+.avatar{
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  margin-left: 15px;
+}
+
+.userheader-name {
+  color: white;
+  background: black;
+  font-size: 50px;
+  font-family: 'Jaldi', sans-serif;
+  margin-left: 45px;
+  padding: 3px;
+}
+
+.user-options{
+  display: flex;
+  color: $black;
+  font-family: 'Jaldi', sans-serif;
+  font-size: 25px;
+  line-height: 1.8;
+  list-style: none;
+  margin-top: 5px;
+}
+
+
+.user-options li {
+  align-items: flex-start;
+  border-bottom: 1px solid $lightgrey;
+  margin-left: 25px;
+}
+
+
+.user-links {
+  display:flex;
+  background: white;
+  width: 75%;
+  margin: auto;
+}
+
+.app-div {
+  display: flex;
 }
