--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -1026,7 +1026,7 @@ textarea.title-input  {
   list-style: none;
   margin: 5px;
   padding-left: 5px;
-  width: 100px;
+  width: 300px;
   border-bottom: 1px $lightgrey;
   font-size: 20px;
   font-family: 'Jaldi', sans-serif;
@@ -1088,4 +1088,23 @@ textarea.title-input  {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+.userdivs {
+  display: flex;
+  width: 100px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.userdivs {
+  text-align: center;
+}
+
+.userlinks  {
+  padding-right: 7px;
+  font-size: 18px;
+  font-family: 'Jaldi', sans-serif;
+  color: $orange;
 }
