--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -137,6 +137,7 @@
 
 .app-div {
   background-color: lightgrey;
+  margin-bottom: 50px;
 }
 
 .input-username{
@@ -635,6 +636,7 @@ textarea.title-input  {
   margin-bottom: 2px;
   background: $lightgrey;
   box-sizing: border-box;
+  padding-bottom: 50px;
 }
 
 .headings-div {
@@ -698,6 +700,8 @@ textarea.title-input  {
 }
 
 
+
+
 //player-info
 
 .play-parent {
@@ -705,7 +709,7 @@ textarea.title-input  {
   flex-direction: column;
   width: 100%;
   align-items: flex-start;
-  padding-bottom: 25px;
+  padding-bottom: 100px;
 }
 
 .artist-img-div {
@@ -830,6 +834,20 @@ textarea.title-input  {
   width: 300px;
 }
 
+.delbutton-div {
+  width: 10%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 96px;
+}
+
+.play-audio-parent {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
 
 //songshow
 
@@ -1053,6 +1071,7 @@ textarea.title-input  {
   flex-direction: row;
   width: 100%;
   justify-content: space-around;
+  padding-bottom: 100px;
 }
 
 .comment-artistinfo {
@@ -1124,6 +1143,11 @@ textarea.title-input  {
   height: 60px;
 }
 
+.footer-play {
+  width: 100%;
+  display: flex;
+}
+
 
 .house-playbardiv {
   width: 90%;
@@ -1131,7 +1155,7 @@ textarea.title-input  {
   margin: auto;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-left: 50px;
 }
 
@@ -1140,3 +1164,118 @@ textarea.title-input  {
   height: 15px;
   cursor: pointer;
 }
+
+  #progress {
+    height: 100%;
+    color: black;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    z-index: 500;
+  }
+
+  .progressbar-div {
+    display: flex;
+    width: 100px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .progressdiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .track-info {
+    z-index: 1000;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .playeralbum-info {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .songinfo-footer{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%
+  }
+
+  .playeralbum-info img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .songinfo-footer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .albuminfo-house {
+    display: flex;
+    width: 2000px;
+    height: 100%;
+    justify-content: flex-end;
+    padding-right: 100px;
+
+  }
+
+  .songinfo-footer {
+    padding-left: 20px;
+    font-size: 18px;
+    font-family: 'Jaldi', sans-serif;
+  }
+
+  .songinfo-footer span {
+    padding: 5px;
+    color: $orange;
+  }
+
+  .progressbar-div{
+    width: 1000px;
+  }
+
+  .progress-div {
+    width: 500px;
+    height: 2px;
+    background-color: $black;
+  }
+
+  .color-div{
+    height: 2px;
+    background-color: $orange;
+  }
+
+  .progressbar-div {
+    height: 100%;
+    width: 7000px;
+    display: flex;
+    align-items: center;
+  }
+
+  .elapsedTime {
+    font-size: 15px;
+    font-family: 'Jaldi', sans-serif;
+    font-weight: bold;
+    margin-right: 10px;
+  }
+
+  .totalTime {
+    font-size: 15px;
+    font-family: 'Jaldi', sans-serif;
+    font-weight: bold;
+    margin-left: 10px;
+  }
+
+
+  button i {
+    cursor: pointer;
+  }
