--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -717,6 +717,7 @@ cursor: pointer;
   box-sizing: border-box;
   width: 350px;
   padding-right: 120px;
+  align-items: baseline;
 }
 
 .upload-img-div input {
@@ -726,10 +727,23 @@ cursor: pointer;
   height: 20px;
 }
 
+.upload-text {
+  padding-top: 10px;
+  font-size: 15px;
+  font-family: 'Jaldi', sans-serif;
+  font-size: 18px;
+}
+
+.text-div{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
 
 .upload-art {
   width: 100%;
   height: 250px;
+  cursor: pointer;
 }
 
 .uploadform-div {
@@ -791,11 +805,45 @@ textarea.title-input  {
   font-size: 20px;
 }
 
+input[type="file"] {
+  border: none;
+  color: inherit;
+  visibility: hidden;
+  z-index: 1000;
+}
+
 .upload-button {
   display: flex;
   justify-content: center;
   padding-top: 40px;
   cursor: pointer;
+}
+
+.real-uploadbutton {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
+  border-radius: 3px;
+  border: 1px solid $orange;
+  width: 120px;
+  height: 30px;
+  color: white;
+  background-color: $orange;
+  font-family: 'Jaldi', sans-serif;
+  font-size: 14px;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.fake-buttondiv {
+  display: flex;
+  align-items: center;
+}
+
+#albumart-upload{
+  width: 100%;
+  height: 100%;
 }
 
 .u-button {
