--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -1519,11 +1519,29 @@ input[type="file"] {
     width: 500px;
     height: 2px;
     background-color: $black;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
   }
 
   .color-div{
     height: 2px;
     background-color: $orange;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    z-index: 2000;
+    width: 100%;
+  }
+
+
+  .color-div::-webkit-slider-thumb {
+    background-color: $orange;
+    -webkit-appearance: none;
+    color: $orange;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
   }
 
   .progressbar-div {
