--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -967,6 +967,24 @@ input[type="file"] {
   justify-content: baseline;
 }
 
+.like-div {
+  height: 25px;
+  border: 1px solid lightgrey;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
+  padding: 2px 2px 1px 2px;
+  cursor: pointer
+}
+
+.likecount {
+  margin-left: 2px;
+  font-family: 'Jaldi', sans-serif;
+  font-size: 17px;
+}
+
 .delete-bro {
   display: flex;
   width: 100%;
